<?xml version="1.0"?>
<package format="3">
  <name>wlr_mujoco</name>
  <version>0.1.0</version>
  <description>MuJoCo simulation for WLR wheeled-legged robot</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>wlr_controller</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
